OrderService/Kubernetes/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  type: ClusterIP    
  ports:
    - name: "http"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
